--- a/config/config.json
+++ b/config/config.json
@@ -1,10 +1,10 @@
 {
   "development": {
     "username": "root",
-    "password": null,
-    "database": "database_development",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
+    "password": "O03fFcm-Jjn5pYCjZVIlosgkk_jIjoIy",
+    "database": "mprzmkqp",
+    "host": "kesavan.db.elephantsql.com",
+    "dialect": "postgres"
   },
   "test": {
     "username": "root",
